5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1758_1183.log
== TEST (2019-05-28 10:14:54) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e(i)
s=size(e)
while i!=s:
	if a>0:
	print(e(i))
	i=i+1
-- ERROR:
File "XXXX", line 8
    print(e(i))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:15:04) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e(i)
s=size(e)
while i!=s:
	if a>0:
	print(e(i))
i=i+1
-- ERROR:
File "XXXX", line 8
    print(e(i))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:15:22) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e(i)
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:15:31) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e(i)
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:16:11) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e(i)
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:16:24) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e(i)
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:16:54) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
print(e(i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:17:11) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
print(e(0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:18:00) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e[i]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:19:04) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e[i]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:19:25) 
-- CODE:
from numpy import *
e=array(int(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e[i]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:19:36) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e[i]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:20:00) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	if a>0:
		print(a)
	i=i+1
	a=e[i]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:21:38) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		print(a)
	i=i+1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:21:49) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		print(a)
	i=i+1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:28:56) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
c=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		j=i
	i=i+1
print(e[j:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:51) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		b=array(eval(i))
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:14) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		b=array((i))
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:48) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		b=array((i))
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:35:31) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		b=array(())
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:36:07) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		b=array((a))
	i=i+1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:36:20) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		b=array((a))
	i=i+1
	print(b)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:36:45) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
a=e[i]
s=size(e)
while i!=s:
	a=e[i]
	if a>0:
		b=array((a))
	i=i+1
	print(b)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:01) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
a=size(e)
i=0   #quantidade de elementos não negativos;
j=0   #elementos não negativos do vetor de entrada para o vetor de saída
k=0   #posição no vetor de entrada
l=0   #controlar a posição no vetor de saída.
b=e[k]

while k!=a:
	b=e[k]
	if b>=0:
		i=i+1
		z=array(b)
	k=k+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:16) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
a=size(e)
i=0   #quantidade de elementos não negativos;
j=0   #elementos não negativos do vetor de entrada para o vetor de saída
k=0   #posição no vetor de entrada
l=0   #controlar a posição no vetor de saída.
b=e[k]

while k!=a:
	b=e[k]
	if b>=0:
		i=i+1
		z=array(b)
	k=k+1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:01:32) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
neg=0
while(i<size(e)):
	if e(i)<0:
		neg=neg+1
	i=i+1
tf=size(e)-neg
vf=zeros(tf,dtype=int)
j=0
i=0

while (i<size(e)):
	if (e[i])>=0:
		vf[j]=e[i]
		j=j+1
	i=i+1
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:46) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
neg=0
while(i<size(e)):
	if e[i]<0:
		neg=neg+1
	i=i+1
tf=size(e)-neg
vf=zeros(tf,dtype=int)
j=0
i=0

while (i<size(e)):
	if (e[i])>=0:
		vf[j]=e[i]
		j=j+1
	i=i+1
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:03:00) 
-- CODE:
from numpy import *
e=array(eval(input("insira os termos: ")))
i=0
neg=0
while(i<size(e)):
	if e[i]<0:
		neg=neg+1
	i=i+1
tf=size(e)-neg
vf=zeros(tf,dtype=int)
j=0
i=0

while (i<size(e)):
	if (e[i])>=0:
		vf[j]=e[i]
		j=j+1
	i=i+1
print(vf)
-- EXECUTION TIME:
0.408177
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
